--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,6 @@ name: PowerfulBackpacks
 version: '${project.version}'
 main: fun.felipe.powerfulbackpacks.PowerfulBackpacks
 api-version: '1.20'
+commands:
+  givebackpack:
+    description: Give a Backpack to Player
