--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,5 @@ api-version: '1.20'
 commands:
   givebackpack:
     description: Give a Backpack to Player
+  listbackpack:
+    description: List Backpacks
