--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,20 +2,20 @@
 #To define the materials for crafting, you must follow the updated item pattern! Example: 'LEATHER' 'STONE' 'DIAMOND'.
 #To define a backpack when creating, use the special character '$' and in the list of 'items' pass the ID of that backpack as a parameter!
 
-#List of Placeholders: (Only works in Lore!)
+#List of Placeholders:
 # - %permission% = command permission
 # - %backpack% = backpack ID param
 # - %backpack_name% = backpack name
-# - $backpack_rows% = backpack rows number
-# - $backpack_slots% = backpack slots number
+# - %backpack_rows% = backpack rows number
+# - %backpack_slots% = backpack slots number
 
 Permission: 'powerfulbackpacks.use' #If this field is not filled in, the permission will be "powerfullbackpacks.use"
 
 Messages:
-  dont_have_permission: '<red>You do not have Permission!'
-  not_found: "<red>Backpack was not found!"
+  dont_have_permission: '<red>You do not have Permission! (%permission%)'
+  not_found: "<red>Backpack was not found! (%backpack%)"
   give_command_usage: '<yellow>Use: /givebackpack <backpack_id>'
-  give_command_success: '<green>Backpack received Successfully!'
+  give_command_success: '<green>Backpack %backpack_name% received Successfully!'
   list_command_message: '<green>List of Backpacks:'
   list_command_items_message: '<green> - %backpack_name% (%backpack%)' #Only command with placeholders!
 
@@ -41,8 +41,8 @@ Backpacks:
     lore:
       - ''
       - '<grey>Its a Reinforced Backpack'
-      - '<grey>Rows: <gold>%backpack_rows%'
-      - '<grey>Slots: <gold>%backpack_slots%'
+      - '<grey>Rows: <bold><gold>%backpack_rows%'
+      - '<grey>Slots: <bold><gold>%backpack_slots%'
       - ''
     rows: 2
     craft:
