--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>fun.felipe</groupId>
   <artifactId>PowerfulBackpacks</artifactId>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.3.0-RELEASE</version>
   <packaging>jar</packaging>
 
   <name>PowerfulBackpacks</name>
@@ -65,6 +65,11 @@
           <id>sonatype</id>
           <url>https://oss.sonatype.org/content/groups/public/</url>
       </repository>
+      <repository>
+          <id>felipe-releases</id>
+          <name>Felipe Ros</name>
+          <url>https://repo.felipe.fun/releases</url>
+      </repository>
   </repositories>
 
   <dependencies>
@@ -79,6 +84,11 @@
           <artifactId>lombok</artifactId>
           <version>1.18.32</version>
           <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>fun.felipe</groupId>
+          <artifactId>Updater</artifactId>
+          <version>1.0.1-RELEASE</version>
       </dependency>
   </dependencies>
 </project>
