--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,23 +2,9 @@
 #To define the materials for crafting, you must follow the updated item pattern! Example: 'LEATHER' 'STONE' 'DIAMOND'.
 #To define a backpack when creating, use the special character '$' and in the list of 'items' pass the ID of that backpack as a parameter!
 
-#List of Placeholders:
-# - %permission% = command permission
-# - %backpack% = backpack ID param
-# - %backpack_name% = backpack name
-# - %backpack_rows% = backpack rows number
-# - %backpack_slots% = backpack slots number
-
 Permission: 'powerfulbackpacks.use' #If this field is not filled in, the permission will be "powerfullbackpacks.use"
 
-Messages:
-  dont_have_permission: '<red>You do not have Permission! (%permission%)'
-  not_found: "<red>Backpack was not found! (%backpack%)"
-  backpack_command_usage: '<yellow>Use: /backpack <give/list>.'
-  give_command_usage: '<yellow>Use: /backpack give <backpack_id>'
-  give_command_success: '<green>Backpack %backpack_name% received Successfully!'
-  list_command_message: '<green>List of Backpacks:'
-  list_command_items_message: '<green> - %backpack_name% (%backpack%)' #Only command with placeholders!
+Language: 'pt-br'
 
 Backpacks:
   basic_backpack: #ID of Backpack (use sneak_case in the backpack identifier!)
@@ -30,6 +16,7 @@ Backpacks:
       - '<grey>Slots: <bold><gold>%backpack_slots%'
       - ''
     rows: 1 #Number of Rows
+    model_data: 0
     craft: #Craft Struct
       shape: #Shape of Recipe
         - 'LLL'
@@ -46,6 +33,7 @@ Backpacks:
       - '<grey>Slots: <bold><gold>%backpack_slots%'
       - ''
     rows: 2
+    model_data: 0
     craft:
       shape:
         - 'III'
